--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -9,3 +9,5 @@ $dark-placeholder: rgb(140, 140, 142);
 $small-shadow: rgba(0, 0, 0, 0.01);
 $light-shadow: rgba(48,51,51,.09);
 $dark-shadow: rgba(0, 0, 0, 0.6);
+$light-gray: rgb(250, 250, 250);
+$dark-gray: rgb(32, 32, 34);
