--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -62,7 +62,6 @@ header {
     }
   }
   input {
-    background: transparent;
     border: none;
     font-size: inherit;
     line-height: 34px;
